🐛 fix(header): augmente le z-index du header [DS-3661] (#830)
- ajout d'un niveau d'élévation `raised-over`
- le header passe en z-index `raised-over` pour passer par dessus les cartes avec ombre

--- a/module/elevation/variable/_z-indexes.scss
+++ b/module/elevation/variable/_z-indexes.scss
@@ -1,5 +1,6 @@
 $values: (
   raised: 500,
+  raised-over: 750,
   overlap: 1000,
   overlap-over: 1250,
   overlap-above: 1500,
